# credit-trading-lab

./: .gitignore  Credit_Trading_Lab_Tier1.docx  Credit_Trading_Lab_Tier2.docx  README.md  jsx  pyproject.toml  render.yaml  requirements.txt
.claude/skills/: quant-dev.md  quant-prd.md  quant-walkthrough.md
.claude/skills/quant-dev/: SKILL.md
.claude/skills/quant-prd/: SKILL.md
.claude/skills/quant-walkthrough/: SKILL.md
.streamlit/: secrets.toml.example
backtest/: ab_test.py  benchmarks.py  engine.py  failure.py  metrics.py  multi_asset.py  regime_table.py
bindings/python/: CMakeLists.txt  pycredit.cpp
cpp/: CMakeLists.txt
cpp/include/credit/: bond.hpp  cds.hpp  date.hpp  daycount.hpp  discount_curve.hpp  interp.hpp  rootfind.hpp  schedule.hpp  survival_curve.hpp  version.hpp
cpp/src/: bond.cpp  cds.cpp  schedule.cpp  survival_curve.cpp  version.cpp
cpp/tests/: CMakeLists.txt  test_bond.cpp  test_cds.cpp  test_daycount.cpp  test_discount_curve.cpp  test_interp.cpp  test_perf.cpp  test_smoke.cpp
cpp/tests/ref/: bond_ytm_vectors.csv  discount_curve_knots.csv  isda_cds_vectors.csv  parity_dump.csv
dashboard/: app.py  conviction.py  loader.py  signal_specs.py  supabase_client.py
dashboard/components/: markers.py  regime_shade.py
dashboard/views/: attribution.py  directional.py  operational.py  research_history.py  rv.py  today.py
data/benchmarks/: random_baseline.parquet
data/processed/: attribution.parquet  attribution_mctr_by_sleeve.parquet  features.parquet  nav_audit.md  v8_1_target_positions.parquet
data/raw/: EEM.parquet  EEM_dividends.parquet  EFA.parquet  EFA_dividends.parquet  GLD.parquet  GLD_dividends.parquet  HYG.parquet  HYG_dividends.parquet  IEF.parquet  IEF_dividends.parquet  LQD.parquet  LQD_dividends.parquet  SPY.parquet  SPY_dividends.parquet  TLT.parquet  TLT_dividends.parquet  credit_market_data.parquet
data/results/: backtest_trades.parquet  failure_analysis.parquet  regime_performance.parquet  regime_signal_quality.parquet
execution/: alpaca_paper.py  calendar_utils.py  costs.py  position.py
execution/logs/: reconciliation_2026-06-17.json
notebooks/: 01_signal_validation.ipynb  02_pricer_validation.ipynb  03_rv_signals.ipynb  04_threshold_tuning.ipynb  05_backtest.ipynb  06_5_engine_correction.ipynb  06_6_hyig_validation.ipynb  06_factor_attribution.ipynb  08_2_add_shorts.ipynb  08_3_attribution.ipynb  55_foundation_repair.ipynb  56_multisignal_validation.ipynb
python/credit/: __init__.py  _types.py
risk/: attribution.py  portfolio.py
scripts/: build_attribution.py  build_notebook_v3.py  build_notebook_v4.py  build_notebook_v5.py  build_notebook_v5_5.py  build_notebook_v5_6.py  build_notebook_v6_5.py  build_notebook_v6_6.py  build_notebook_v8_2.py  build_notebook_v8_3.py  probe_nav.py  provision_supabase.py  run_execution.py  run_signal.py  sync_positions_from_alpaca.py  today_view_screenshot.py  write_render_secrets.py
signals/: benchmarks.py  dividends.py  etf_universe.py  features.py  flags.py  fred.py  halflife.py  load.py  nav_wedge.py  pipeline.py  regimes.py  rv_signals.py  trend_signal.py  zscore.py
sprints/v1/: PRD.md  PRD_update.md  PRD_update_02.md  TASKS.md  TASKS_update.md  TASKS_update_02.md  WALKTHROUGH.md  make_plots.py  notes.md
sprints/v2/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v3/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v4/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md  slider_latency.csv
sprints/v5/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v5.5/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v5.6/: PRD.md  TASKS.md  notes.md  signal_selection.md
sprints/v5.7/: PRD.md  TASKS.md
sprints/v6/: PRD.md  TASKS.md  attribution_summary.md  attribution_table.csv  notes.md
sprints/v6.5/: PRD.md  TASKS.md  correction_summary.md  notes.md
sprints/v6.6/: PRD.md  TASKS.md  notes.md
sprints/v7.1/: PRD.md  TASKS.md  notes.md
sprints/v8.1/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v8.2/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v8.3/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v8.4/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md
sprints/v8.5/: PRD.md  TASKS.md  WALKTHROUGH.md  notes.md  supabase_schema.sql
sprints/v8.6/: DEPLOYMENT_CHECKLIST.md  PRD.md  TASKS.md  notes.md  supabase_schema.sql
tests/: test_ab_test.py  test_attribution.py  test_backtest_benchmarks.py  test_batch_throughput.py  test_benchmarks.py  test_calendar_utils.py  test_canonical.py  test_conviction.py  test_costs.py  test_cpp_parity.py  test_credit_data.py  test_dashboard_sanity.py  test_dashboard_smoke.py  test_engine.py  test_failure.py  test_metrics.py  test_multi_asset_backtest.py  test_nav_wedge.py  test_paper_execution.py  test_portfolio.py  test_position.py  test_probe_nav.py  test_regime_quality.py  test_regime_shade.py  test_regime_table.py  test_regimes.py  test_rv_signals.py  test_signals.py  test_trend_signal.py
