[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-trading-lab"
version = "0.0.1"
description = "Research lab for systematic credit trading strategies."
requires-python = ">=3.9"

[tool.setuptools]
packages = ["signals", "backtest", "execution", "risk", "models", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
